--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Droomloopbaan</title>
     </head>
     <body>
         <div class="app">
+        <img src="img/logo.png" width="80%"/><br><br>
             <div id="login">
                 <form method="post" class="login" action="login_exec.php">
                     <li>
